# cpp-project

./: CMakeLists.txt  README.md  build.bat  run.bat
src/: main.cpp
